--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,72 @@
+@font-face {
+    font-family: 'Heebo';
+    src: url('fonts/Heebo-Thin.ttf') format('truetype');
+    font-weight: 100;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Heebo';
+    src: url('fonts/Heebo-ExtraLight.ttf') format('truetype');
+    font-weight: 200;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Heebo';
+    src: url('fonts/Heebo-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-display: swap;
+}
+
+
+@font-face {
+    font-family: 'Heebo';
+    src: url('fonts/Heebo-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Heebo';
+    src: url('fonts/Heebo-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Heebo';
+    src: url('fonts/Heebo-SemiBold.ttf') format('truetype');
+    font-weight: 600;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Heebo';
+    src: url('fonts/Heebo-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Heebo';
+    src: url('fonts/Heebo-ExtraBold.ttf') format('truetype');
+    font-weight: 800;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Heebo';
+    src: url('fonts/Heebo-Black.ttf') format('truetype');
+    font-weight: 900;
+    font-display: swap;
+}
 
 
 
 body {
     margin: 0;
-    font-family: 'Heebo';
+    font-family: 'Heebo', sans-serif;
     padding-top: 80px;
 }
 
